vue cli - reload - axios

--- a/SeriesPart5-components-created-mounted-computed.html
+++ b/SeriesPart5-components-created-mounted-computed.html
@@ -15,6 +15,9 @@
   			<tab name="About Out Vision">
   				<h1>Here is the content for the About Out Vision tab</h1>
   			</tab>
+        <tab name="sarasa">
+          <h1>saddsfasdf</h1>
+        </tab>
   		</tabs>
   </div>
 </body>
