--- a/SeriesPart7-components-slotNames.html
+++ b/SeriesPart7-components-slotNames.html
@@ -11,10 +11,10 @@
     	<!-- if you dont want to embedded de slot component use template-->
     	<template slot="header">My Title</template>
     	This is the modal content
-    	<!--<div slot="footer">
+    	<div slot="footer">
     		<button class="button is-success">Save changes</button>
 		    <button class="button">Cancel</button>
-    	</div>-->
+    	</div>
     </modal>
   </div>
 </body>
